ingress/monitoring/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: wellness-ca
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.wellness.local
      secretName: grafana-tls
  rules:
  - host: grafana.wellness.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-grafana
            port:
              number: 80
